--- a/app/src/main/res/layout/page_item.xml
+++ b/app/src/main/res/layout/page_item.xml
@@ -9,9 +9,10 @@
 <!--android:layout_height="match_parent">-->
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10.0dp"
     android:layout_width="match_parent"
-    android:layout_height="220dp"
+    android:layout_height="255dp"
 
     >
 
@@ -22,44 +23,88 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
-        <ImageView
-
+        <RelativeLayout
+            android:background="#8BC34A"
             android:scaleType="centerCrop"
             android:id="@+id/card_image"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="200dp"
             android:src="@drawable/androidapple"
             />
+        <LinearLayout
+            android:layout_marginBottom="20dp"
+            android:weightSum="2"
+            android:layout_alignParentEnd="true"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp">
+        <ImageView
+            android:layout_weight="0.75"
+            android:id="@+id/difficulty"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/difficulty"
+
+            />
+        <ImageView
+            android:layout_weight="1"
+            android:id="@+id/que_type"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/que_type"
+
+            android:paddingTop="10dp"
+            android:layout_below="@+id/difficulty"/>
+        </LinearLayout>
+
         <TextView
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="20dp"
             android:id="@+id/helloText_1"
-            android:layout_marginRight="20dp"
-            android:fontFamily="casual"
-            android:textStyle="bold"
-            android:textSize="16.0sp"
-            android:textColor="@android:color/black"
-            android:text="@string/hello_world"
-            android:padding="15.0dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/flip_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            />
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:fontFamily="sans-serif"
+            android:padding="15.0dp"
+            android:text="@string/hello_world"
+            android:textColor="@android:color/black"
+            android:textSize="16.0sp"
+            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_below="@+id/card_image"
+            android:weightSum="3"
+            android:paddingTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_weight="1"
+                android:id="@+id/like_heart"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
 
-        <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="2.0dp"-->
-        <!--android:background="@drawable/shadow"/>-->
+                android:layout_below="@+id/card_image"
+                app:srcCompat="@drawable/heart_black"/>
+        <ImageView
+            android:layout_weight="1"
+            android:id="@+id/share_card"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/share"
+            android:layout_toRightOf="@+id/like_heart"
+            android:layout_below="@+id/card_image"/>
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/flip"
+            android:layout_below="@+id/card_image"
+            android:layout_toRightOf="@+id/share_card"/>
+        </LinearLayout>
+
+
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
