--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFC107</color>
-    <color name="colorPrimaryDark">#FFA000</color>
-    <color name="colorAccent">#FF5722</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark"> #3F51B5</color>
+    <color name="colorAccent">#03A9F4</color>
 </resources>
