--- a/app/src/main/res/layout/activity_new_card.xml
+++ b/app/src/main/res/layout/activity_new_card.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent" android:layout_height="match_parent">
     <EditText
         android:layout_width="match_parent"
@@ -12,7 +13,7 @@
     <EditText
         android:id="@+id/card_ans"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:layout_below="@id/card_que"
         android:paddingTop="25dp"
         android:hint="Answer"
@@ -24,15 +25,52 @@
         android:id="@+id/card_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/card_tags"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="82dp"
+        android:layout_marginTop="38dp"
         android:background="@drawable/button_shape"
         android:drawablePadding="5dp"
         android:paddingLeft="40dp"
         android:paddingRight="40dp"
         android:text="Add Card"
         android:textColor="#fff" />
+    <TextView
+        android:id="@+id/text_1"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@+id/card_ans"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Difficulty Level"
+        android:textSize="18dp"/>
+
+    <SeekBar
+
+        android:layout_below="@+id/text_1"
+        android:id="@+id/difficulty_level"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_below="@+id/difficulty_level"
+        android:id="@+id/text_2"
+        android:textSize="18dp"
+
+        android:layout_marginLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tags"/>
+    <AutoCompleteTextView
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_below="@+id/text_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/card_tags">
+        <requestFocus/>
+    </AutoCompleteTextView>
 
 
 </RelativeLayout>
