--- a/app/src/main/res/layout/page_item.xml
+++ b/app/src/main/res/layout/page_item.xml
@@ -46,15 +46,6 @@
             android:src="@drawable/difficulty"
 
             />
-        <ImageView
-            android:layout_weight="1"
-            android:id="@+id/que_type"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/que_type"
-
-            android:paddingTop="10dp"
-            android:layout_below="@+id/difficulty"/>
         </LinearLayout>
 
         <TextView
@@ -72,7 +63,19 @@
             android:textColor="@android:color/black"
             android:textSize="16.0sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tags"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/pannel_ll"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:fontFamily="serif-monospace"
+            android:text="Tags Here "
+            android:textSize="15dp" />
         <LinearLayout
+            android:id="@+id/pannel_ll"
             android:layout_below="@+id/card_image"
             android:weightSum="3"
             android:paddingTop="10dp"
