--- a/app/src/main/res/layout/swipe_card.xml
+++ b/app/src/main/res/layout/swipe_card.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CardSwipeActivity"
-    android:background="#000"
+    android:background="#90a4ae"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
